--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="./assets/header/og.JPG"/>
+  <meta property="og:image" content="./assets/header/og2.JPG"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
